--- a/environment.yml
+++ b/environment.yml
@@ -4,14 +4,14 @@ channels:
 dependencies:
   - conda
   - python=3.9
-  - menuinst
+#  - menuinst
   - console_shortcut
-  - powershell_shortcut
+#  - powershell_shortcut
   - conda-env
   - conda-build
   - conda-verify
   - _ipyw_jlab_nb_ext_conf
-  - anaconda==2022.10=py39_0
+#  - anaconda==2022.10=py39_0
   - anaconda-navigator==2.3.2
   - navigator-updater
   - jupyterlab
